--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.0",
+    "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   },
