--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
