--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "name": "portfolio-project",
