--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "mailgun.js": "^9.3.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "paystack": "^2.0.1",
+    "paystack-api": "^2.0.6"
   },
   "name": "portfolio-project",
   "version": "1.0.0",
