--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "paystack": "^2.0.1",
-    "paystack-api": "^2.0.6"
+    "paystack-api": "^2.0.6",
+    "redis": "^4.6.13"
   },
   "name": "portfolio-project",
   "version": "1.0.0",
